[metadata]
name = pyprctl
version = attr: pyprctl.__version__
url = https://github.com/cptpcrd/pyprctl
description = A partial reimplementation of psutil in pure Python using ctypes.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = prctl
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: MacOS :: MacOS X

[options]
packages = find:
python_requires = >=3.7

# vim: ts=4 expandtab
