[metadata]
name = pyprctl
version = attr: pyprctl.__version__
url = https://github.com/cptpcrd/pyprctl
description = An interface to Linux's prctl() syscall written in pure Python using ctypes.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = prctl
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux

project_urls =
    Documentation = https://pyprctl.readthedocs.io/en/latest

[options]
packages = find:
python_requires = >=3.6
install_requires =
    dataclasses;python_version<='3.6'

[options.packages.find]
exclude = tests

[options.package_data]
pyprctl = py.typed

# vim: ts=4 expandtab
